[project]
name = "db-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.3",
    "huggingface-hub>=1.16.1",
    "langchain-core>=1.4.0",
    "langchain-google-genai>=4.2.3",
    "langchain-huggingface>=1.2.2",
    "langgraph>=1.2.1",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "pymongo>=4.17.0",
    "pymysql>=1.2.0",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.47.0",
]
